--- a/src/ejercicio_sockets_ddr_4/Frm1.form
+++ b/src/ejercicio_sockets_ddr_4/Frm1.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ejercicio_sockets_ddr_3.Frm1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ejercicio_sockets_ddr_4.Frm1">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -34,15 +34,13 @@
               </component>
             </children>
           </grid>
-          <component id="a22b3" class="javax.swing.JTextField" binding="textTextoEnviar">
+          <component id="f70c4" class="javax.swing.JTextField" binding="textTextoEnviar">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
+            <properties/>
           </component>
         </children>
       </grid>
@@ -54,15 +52,13 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="45a71" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
+          <component id="d1ce3" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
+            <properties/>
           </component>
         </children>
       </grid>
